--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 [project]
 name = "unitment"
-version = "0.0.4"
+version = "0.0.5"
 authors = [
   { name="Tristin Alexander S.", email="trystyn.alxander@gmail.com" },
 ]
-description = "The `unitment` module provides support for dynamic unit management through `Unit` and `Measure` classes."
+description = "Dynamic unit management through `Unit` and `Measure` classes."
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
