--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 [project]
 name = "unitment"
-version = "0.0.6"
+version = "0.0.7"
 authors = [
   { name="Tristin Alexander S.", email="trystyn.alxander@gmail.com" },
 ]
-description = "Dynamic unit management through `Unit` and `Measure` classes."
+keywords = ["unit","units","measure","measurement","measures","measurements"]
+description = "Dynamic unit management."
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
